--- a/index.html
+++ b/index.html
@@ -22,9 +22,35 @@
             </ol>
         </nav>
     </header>
-    <section>Sección principal</section>
-    <section>Sección portafolio</section>
-    <section>Sección eventos</section>
+    <section>
+        <h1>
+            Hola! Soy <strong>Cristobal Vega</strong><br /> desarrollador <strong> Javascript con </strong><br /> pasión por la enseñanza.
+        </h1>
+        <img> Imagen de portada.
+    </section>
+    <section>
+        <h2>Portafolio (Proyectos Destacados) </h2>
+        <article>
+            <h3>Inifap App</h3>
+            <h6>Ionic framework / MEAN Stack</h6>
+            <p><small><strong>Fecha: </strong> 01/07/2018</small></p>
+            <p><small><strong>Puedes Verlo en : </strong> www.cideti.inifap.com </small></p>
+            <p>
+                Inifap-app es una Herrramienta de Interacción con investigadores del CESIX.
+            </p>
+        </article>
+    </section>
+    <section>
+        <h2>Más sobre mi experiencia</h2>
+        <article>
+            <figure>
+                <img/>
+            </figure>
+            <h3>CIAGE 2018</h3>
+            <p>Es un evento de Couching celebrado en Nuevo Vallarta en el Hotel Maribal</p>
+            <a>Ver Fotos</a>
+        </article>
+    </section>
     <section>Sección contacto</section>
     <footer>piedepagina</footer>
 </body>
