feat: Agregados imagenes al proyecto
Este código está basado en el capítulo 'Atributos' del curso 'Desarrollo Web online' de Platzi.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
+    <meta charset="UTF-8" />
     <title>Hola soy Cristobal Vega</title>
+    <!--
+    TODO: Generar un fav icon, he aquí un tuto: https://platzi.com/tutoriales/1350-html5-css3/2846-favicon-generator-maximiza-la-compatibilidad-de-tu-favicon/
+
+    <link rel="icon" type="image/png" href="/images/favicon_package_v0.16/favicon-16x16.png"/> 
+    -->
 </head>
 
 <body>
@@ -11,7 +17,7 @@
             <ul></ul>
             <ol>
                 <li>
-                    <a>portafolio</a>
+                    <a href="#">Portafolio</a>
                 </li>
                 <li>
                     <a>Experiencia</a>
@@ -24,9 +30,10 @@
     </header>
     <section>
         <h1>
-            Hola! Soy <strong>Cristobal Vega</strong><br /> desarrollador <strong> Javascript con </strong><br /> pasión por la enseñanza.
+            Hola! Soy <strong>Cristobal Vega</strong><br /> desarrollador <strong> Javascript con </strong><br />
+            pasión por la enseñanza.
         </h1>
-        <img> Imagen de portada.
+        <img src="images/hero.jpeg" alt="Imagen principal del sitio.">
     </section>
     <section>
         <h2>Portafolio (Proyectos Destacados) </h2>
@@ -38,13 +45,14 @@
             <p>
                 Inifap-app es una Herrramienta de Interacción con investigadores del CESIX.
             </p>
+            <img width="500"  src="images/inifap.png" alt="Proyecto para Inifap ">
         </article>
     </section>
     <section>
         <h2>Más sobre mi experiencia</h2>
         <article>
             <figure>
-                <img/>
+                <img src="images/CIDETIBoyBand.jpg" alt="Logo de htttp://cristobalvega.me" width="500" /> Logo
             </figure>
             <h3>CIAGE 2018</h3>
             <p>Es un evento de Couching celebrado en Nuevo Vallarta en el Hotel Maribal</p>
