Creado un espacio para dejarme su correo
Este commit está inspirado en el curso de 'Desarrollo Web online' en el capítulo 'Formularios HTML'

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>
                 Inifap-app es una Herrramienta de Interacción con investigadores del CESIX.
             </p>
-            <img width="500"  src="images/inifap.png" alt="Proyecto para Inifap ">
+            <img width="500" src="images/inifap.png" alt="Proyecto para Inifap ">
         </article>
     </section>
     <section>
@@ -59,7 +59,14 @@
             <a>Ver Fotos</a>
         </article>
     </section>
-    <section>Sección contacto</section>
+    <section>
+        <form action="/suscripcion/">
+            <h3>¿Creamos algo Juntos?</h3>
+            <input type="text" placeholder="Déjame tu email" id="email">
+            <input type="submit" value="Texto del botón">
+            <button>Enviar</button>
+        </form>
+    </section>
     <footer>piedepagina</footer>
 </body>
 
