Ahora tiene navegación entre secciones
Se anexaron dos tipos de navegaciones, una interna hacia las secciones y la otra externa hacia la página del CIAGE 2018, este commit está inspirado en el capítulo 'Navegación entre secciones' del curso de 'Desarrollo Web Online' de Platzi.com

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <ul></ul>
             <ol>
                 <li>
-                    <a href="#">Portafolio</a>
+                    <a href="#portfolio">Portafolio</a>
                 </li>
                 <li>
-                    <a>Experiencia</a>
+                    <a href="#experiencie">Experiencia</a>
                 </li>
                 <li>
-                    <a>Trabajemos Juntos</a>
+                    <a href="#contact">Trabajemos Juntos</a>
                 </li>
             </ol>
         </nav>
@@ -35,7 +35,7 @@
         </h1>
         <img src="images/hero.jpeg" alt="Imagen principal del sitio.">
     </section>
-    <section>
+    <section id="portfolio">
         <h2>Portafolio (Proyectos Destacados) </h2>
         <article>
             <h3>Inifap App</h3>
@@ -48,7 +48,7 @@
             <img width="500" src="images/inifap.png" alt="Proyecto para Inifap ">
         </article>
     </section>
-    <section>
+    <section id="experiencie">
         <h2>Más sobre mi experiencia</h2>
         <article>
             <figure>
@@ -56,14 +56,13 @@
             </figure>
             <h3>CIAGE 2018</h3>
             <p>Es un evento de Couching celebrado en Nuevo Vallarta en el Hotel Maribal</p>
-            <a>Ver Fotos</a>
+            <a href="http://ciage.ittepic.edu.mx/" target="_blank">Ver evento</a>
         </article>
     </section>
-    <section>
+    <section id="contact">
         <form action="/suscripcion/">
             <h3>¿Creamos algo Juntos?</h3>
             <input type="text" placeholder="Déjame tu email" id="email">
-            <input type="submit" value="Texto del botón">
             <button>Enviar</button>
         </form>
     </section>
