--- a/index.html
+++ b/index.html
@@ -1,72 +1,45 @@
 <!DOCTYPE html>
-<html lang="es">
-
 <head>
     <meta charset="UTF-8" />
-    <title>Hola soy Cristobal Vega</title>
-    <!--
-    TODO: Generar un fav icon, he aquí un tuto: https://platzi.com/tutoriales/1350-html5-css3/2846-favicon-generator-maximiza-la-compatibilidad-de-tu-favicon/
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"/>
+    <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css">
+    <title>Hola soy Cristobal</title>
+    <style type="text/css">
+    body {
+        background-color: rgb(250, 255, 255);
+    }
 
-    <link rel="icon" type="image/png" href="/images/favicon_package_v0.16/favicon-16x16.png"/> 
-    -->
+    h1 {
+        font-family: "Oswald", sans-serif;
+        background-color: rgba(45, 45, 45, 0.1);
+        padding: 10px;
+    }
+
+    h2 {
+        font-family: "Roboto", sans-serif;
+    }
+
+    p {
+        font-family: "Heebo", sans-serif;
+        font-size: 20px;
+    }
+
+    li {
+        font-family: "PT Sans", sans-serif;
+        font-size: 18px;
+    }
+    </style>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <ul></ul>
-            <ol>
-                <li>
-                    <a href="#portfolio">Portafolio</a>
-                </li>
-                <li>
-                    <a href="#experiencie">Experiencia</a>
-                </li>
-                <li>
-                    <a href="#contact">Trabajemos Juntos</a>
-                </li>
-            </ol>
-        </nav>
-    </header>
-    <section>
-        <h1>
-            Hola! Soy <strong>Cristobal Vega</strong><br /> desarrollador <strong> Javascript con </strong><br />
-            pasión por la enseñanza.
-        </h1>
-        <img src="images/hero.jpeg" alt="Imagen principal del sitio.">
-    </section>
-    <section id="portfolio">
-        <h2>Portafolio (Proyectos Destacados) </h2>
-        <article>
-            <h3>Inifap App</h3>
-            <h6>Ionic framework / MEAN Stack</h6>
-            <p><small><strong>Fecha: </strong> 01/07/2018</small></p>
-            <p><small><strong>Puedes Verlo en : </strong> www.cideti.inifap.com </small></p>
-            <p>
-                Inifap-app es una Herrramienta de Interacción con investigadores del CESIX.
-            </p>
-            <img width="500" src="images/inifap.png" alt="Proyecto para Inifap ">
-        </article>
-    </section>
-    <section id="experiencie">
-        <h2>Más sobre mi experiencia</h2>
-        <article>
-            <figure>
-                <img src="images/CIDETIBoyBand.jpg" alt="Logo de htttp://cristobalvega.me" width="500" /> Logo
-            </figure>
-            <h3>CIAGE 2018</h3>
-            <p>Es un evento de Couching celebrado en Nuevo Vallarta en el Hotel Maribal</p>
-            <a href="http://ciage.ittepic.edu.mx/" target="_blank">Ver evento</a>
-        </article>
-    </section>
-    <section id="contact">
-        <form action="/suscripcion/">
-            <h3>¿Creamos algo Juntos?</h3>
-            <input type="text" placeholder="Déjame tu email" id="email">
-            <button>Enviar</button>
-        </form>
-    </section>
-    <footer>piedepagina</footer>
+    <h1>Hola, mi nombre es Cristobal</h1>
+    <h2>Me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
+    <p>Aquí mis redes sociales:</p>
+    <ul>
+        <li><a href="https://twitter.com/cristobalvega96"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        <li><a href="https://instagram.com/cristobalvega96"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+    </ul>
 </body>
-
 </html>
