--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
         font-family: "Oswald", sans-serif;
         background-color: rgba(45, 45, 45, 0.1);
         padding: 10px;
+        font-size: 50px;
     }
 
     h2 {
         font-family: "Roboto", sans-serif;
+        font-size: 40px;
     }
 
     p {
         font-family: "Heebo", sans-serif;
-        font-size: 20px;
+        font-size: 30px;
     }
 
-    li {
-        font-family: "PT Sans", sans-serif;
-        font-size: 18px;
+    a {
+        background-color: rgb(173, 179, 241); 
     }
     </style>
 </head>
 <body>
     <h1>Hola, mi nombre es Cristobal</h1>
     <h2>Me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
-    <p>Aquí mis redes sociales:</p>
-    <ul>
-        <li><a href="https://twitter.com/cristobalvega96"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-        <li><a href="https://instagram.com/cristobalvega96"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-    </ul>
+    <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
+    <br>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a>donde suelo comparir ideas o cosas de mí interés.
+    <br>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios.
+    </p>
 </body>
 </html>
