Un nuevo diseño visual
Se le colocaron a cada uno de los tags h1...h6 tamaños de fuentes y se quitaron la mayoría de las fuentes externas, para conseguir una página web limpia libre de externos, solo HTML, CSS y JavaScript plano

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"/>
-    <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css">
     <title>Hola soy Cristobal</title>
     <style type="text/css">
     body {
@@ -13,20 +8,45 @@
     }
 
     h1 {
-        font-family: "Oswald", sans-serif;
-        background-color: rgba(45, 45, 45, 0.1);
-        padding: 10px;
-        font-size: 50px;
+        font-family: sans-serif;
+        font-size: 68px;
+        font-weight: 750;
     }
 
     h2 {
-        font-family: "Roboto", sans-serif;
+        font-family: sans-serif;
+        font-size: 52px;
+    }
+
+    h3 {
+        font-family: "PT Sans", sans-serif;
         font-size: 40px;
     }
 
+    h4 {
+        font-size: 32px;
+    }
+
+    h5 {
+        font-size: 21px;
+    }
+
+    h6 {
+        font-size: 14px;
+    }  
+
     p {
-        font-family: "Heebo", sans-serif;
+        font-family: sans-serif;
         font-size: 30px;
+        background-color: rgba(45, 45, 45, 0.1);
+        padding: 10px;
+        opacity: 0.7;
+        line-height: 75px;
+    }
+
+    a:hover {
+        background-color: rgb(44, 60, 238);
+        color: white; 
     }
 
     a {
@@ -35,10 +55,10 @@
     </style>
 </head>
 <body>
-    <h1>Hola, mi nombre es Cristobal</h1>
-    <h2>Me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
+    <h1>Hola,</h1>
+    <h2>Mi nombre es Cristobal, me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
     <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
-    <br>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a>donde suelo comparir ideas y pelearme con amigos.
+    <br>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo comparir ideas y pelearme con amigos.
     <br>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios.
     </p>
 </body>
