Un pequeño resago de fuente sin usar
Olvidé eliminar la fuente para el tag h3 PT Sans, de igual manera ya no estaba el enlace para obtenerla así que la vista sigue totalmente igual

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     h3 {
-        font-family: "PT Sans", sans-serif;
+        font-family: sans-serif;
         font-size: 40px;
     }
 
