--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h1>Hola,</h1>
     <h2>Mi nombre es Cristobal, me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
     <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
-    <br>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo comparir ideas y pelearme con amigos.
+    <br>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.
     <br>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios.
     </p>
 </body>
