feat: Agregado el correo
Ahora hay correo con dominio y está agregado en un ancla.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
     <br>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.
     <br>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios.
+        <br>Si quieres que trabajemos juntos puedes contactarme a <a href="mailto:contact@cristobalvega.me?subject=Hola Cristobal, ví tu portafolio y me interesa colaborar contigo."> mi correo </a> donde nos podemos comunicar. ;)
     </p>
 </body>
 </html>
