feat: separar el estilo de la página de HTML
Al separar la hoja de estilos de la hoja de lenguaje de marcado el HTML está más limpio y se hace una separación de intereses, para tener un futuro mejor diseño.

--- a/index.html
+++ b/index.html
@@ -6,33 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"/>
     <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <title>Hola soy Cristobal</title>
-    <style type="text/css">
-    body {
-        background-color: rgb(250, 255, 255);
-    }
-
-    h1 {
-        font-family: "Oswald", sans-serif;
-        background-color: rgba(45, 45, 45, 0.1);
-        padding: 10px;
-        font-size: 50px;
-    }
-
-    h2 {
-        font-family: "Roboto", sans-serif;
-        font-size: 40px;
-    }
-
-    p {
-        font-family: "Heebo", sans-serif;
-        font-size: 30px;
-    }
-
-    a {
-        background-color: rgb(173, 179, 241);
-    }
-    </style>
 </head>
 <body>
     <h1>Hola, mi nombre es Cristobal</h1>
