feat: Agregados un header, section y footer
Ahora le incorporé al sitio más etiquetas de HTML para seguir buenas practicas de diseño.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
     <title>Hola soy Cristobal</title>
 </head>
 <body>
-    <h1>Hola,</h1>
-    <h2>Mi nombre es Cristobal, me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
-    <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
-    <br>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.
-    <br>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios.
-        <br>Si quieres que trabajemos juntos puedes contactarme a <a href="mailto:contact@cristobalvega.me?subject=Hola Cristobal, ví tu portafolio y me interesa colaborar contigo."> mi correo </a> donde nos podemos comunicar. ;)
-    </p>
+    <header>Wilkomen.👋</header>
+    <section class="hero">
+        <h1>Hola,</h1>
+        <h2>Mi nombre es Cristobal, me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
+        <img src="images/me.jpg" width="427" height="320" alt="Imagen del sitio principal">
+    </section>
+    <section class="portafolio">
+        <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
+    </section>
+    <section class="contacto">
+        <p>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.</p>
+        <p>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios. </p>
+    </section>
+    <footer> See ya buddy.🤙</footer>
 </body>
 </html>
