--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 <body>
     <header>Wilkomen.👋</header>
     <section class="hero">
-        <h1>Hola,</h1>
-        <h2>Mi nombre es Cristobal, me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</h2>
-        <img src="images/me.jpg" width="427" height="320" alt="Imagen del sitio principal">
+        <div class="container">
+            <h1>Hola, mi nombre es Cristobal, <br> irreverente y me dicen el hombre de las mil manías. </h1>
+            <img class="hero-image" src="https://cristobalvega.me/images/me.jpg" width="427" height="320" alt="Imagen del sitio principal">
+    </div>
     </section>
     <section class="portafolio">
+        <p>Me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</p>
         <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
     </section>
     <section class="contacto">
         <p>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.</p>
         <p>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios. </p>
     </section>
-    <footer> See ya buddy.🤙</footer>
+    <footer> See ya buddy.👋</footer>
 </body>
 </html>
