Cambié de usernae en Twitter e Instagram
Ahora mi username es 'cristobalvegamx' espero durar con él un rato hasta que se me ocurra algo mejor

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
     </section>
     <section class="contacto">
-        <p>Puedes encontrarme en <a href="https://twitter.com/cristobalvega96" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.</p>
-        <p>También tengo <a href="https://instagram.com/cristobalvega96" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios. </p>
+        <p>Puedes encontrarme en <a href="https://twitter.com/cristobalvegamx" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.</p>
+        <p>También tengo <a href="https://instagram.com/cristobalvegamx" target="_blank">mi instagram</a> donde comparto fotos con amigos y de objetos varios. </p>
     </section>
     <footer> See ya buddy.👋</footer>
 </body>
