fix typo en el titulo
P.D: Espero que Leonidas Esteban no vea que me piratie su proyecto de CSS Grid, le moveré aquí y a sha para que se desprenda un poco hehe

--- a/fotos.html
+++ b/fotos.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
-  <title>Pinterest</title>
+  <title>Fotografías de Cristobal</title>
   <style>
     h1 {
       font-family: sans-serif;
@@ -51,6 +51,5 @@
       <img src="fotos_files/photo4.jpg" alt="">
     </div>
   </div>
-
-
-</body></html>
+</body>
+</html>
