--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
     <section class="portafolio">
         <p>Me gusta el desarrollo web y esta página será donde compartiré mis ideas y proyectos.</p>
-        <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega96" target="_blank">github.</a>
+        <p>Parte de mí trabajo de desarrollo esta en mi <a href="https://github.com/cristobalvega" target="_blank">github.</a>
     </section>
     <section class="contacto">
         <p>Puedes encontrarme en <a href="https://twitter.com/uncristobalito" target="_blank">mi twitter</a> donde suelo compartir ideas y pelearme con amigos.</p>
