--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
           <h3 class="project-title">StephenKingManía</h3>
           <h6 class="project-course">La escuela de JavaScript de Platzi</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 23/11/2019</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en:</strong> http://stephenkingmania.com/</small></p>
+          <p class="project-url">
+            <small><strong>Puedes verlo en:</strong> 
+          <a href="http://stephenkingmania.com/"> stephenkingmania.com </a>
+            </small></p>
           <p class="project-description">Una página que busca construir una comunidad enfocada en el exitoso autor de novelas de terror.
             <br /> Navega por la página y Ayudanos a crear la colección más completa de los libros de SthephenKing.
           </p>
