fix: fixed instagram url and burger button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h6 class="project-course">La escuela de JavaScript de Platzi</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 23/11/2019</small></p>
           <p class="project-url">
-            <small><strong>Puedes verlo en:</strong> 
+            <small><strong>Puedes verlo en:</strong>
           <a href="http://stephenkingmania.com/"> stephenkingmania.com </a>
             </small></p>
           <p class="project-description">Una página que busca construir una comunidad enfocada en el exitoso autor de novelas de terror.
@@ -89,7 +89,7 @@
           <a href="https://twitter.com/@uncristobalito" class="social-link twitter"></a>
           <a href="https://platzi.com/@cristobalvega/" class="social-link facebook"></a>
           <a href="https://github.com/cristobalvega" class="social-link github"></a>
-          <a href="https://instagram.com/@uncristobalito" class="social-link instagram"></a>
+          <a href="https://www.instagram.com/uncristobalito/" class="social-link instagram"></a>
         </div>
       </div>
     </section>
