added Dev icon, fixed mailto form and added transparency on header when is responsive

--- a/index.html
+++ b/index.html
@@ -80,16 +80,19 @@
     </section>
     <section id="contacto" class="contact">
       <div class="container">
-        <form action="/suscripcion/" class="form-email">
+        <form action="mailto:contact@cristobalvega.me?subject=Hola%20he%20visto%20tu%20web%20y%20me%20gustaría%20contactarte!" class="form-email">
           <h3>¿Creamos algo juntos?</h3>
           <input type="text" placeholder="Déjame tu email" id="email">
           <button>Enviar</button>
         </form>
         <div class="social">
           <a href="https://twitter.com/@uncristobalito" class="social-link twitter"></a>
+          <a href="https://www.instagram.com/uncristobalito/" class="social-link instagram"></a>
           <a href="https://platzi.com/@cristobalvega/" class="social-link facebook"></a>
           <a href="https://github.com/cristobalvega" class="social-link github"></a>
-          <a href="https://www.instagram.com/uncristobalito/" class="social-link instagram"></a>
+          <a href="https://dev.to/cristobalvega">
+            <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Cristobal Vega's DEV Profile" height="55" width="55">
+          </a>
         </div>
       </div>
     </section>
