--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     <section class="hero">
       <div class="container">
         <h1>
-          Hola! Soy <strong>Cristobal Vega</strong> <br/> Desarrollador  <strong>Javascript</strong> con <br> pasión por la <strong>enseñanza</strong>
+<!--          Hola! Soy <strong>Cristobal Vega</strong> <br/> Desarrollador  <strong>Javascript</strong> con <br> pasión por la <strong>enseñanza</strong>-->
+            Hello!, I'm <strong>Cristobal Vega</strong>
+            <br/> <strong>Java</strong> and <strong>JavaScript</strong> dev
+            <br/> <em class="notJava">(Just to realize JavaScript isn't Java)</em>
         </h1>
         <img class="hero-image" src="images/platzi-conf-2019.jpg" width="500" height="300" alt="imagen principal del sitio">
       </div>
