--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
           <a href="https://dev.to/cristobalvega">
             <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Cristobal Vega's DEV Profile" height="55" width="55">
           </a>
+          <a href="https://www.goodreads.com/cristobalvega"class="social-link goodreads"></a>
         </div>
       </div>
     </section>
