--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
         <div class="social">
           <a href="https://twitter.com/@uncristobalito" class="social-link twitter"></a>
           <a href="https://www.instagram.com/uncristobalito/" class="social-link instagram"></a>
-          <a href="https://platzi.com/@cristobalvega/" class="social-link facebook"></a>
           <a href="https://github.com/cristobalvega" class="social-link github"></a>
+          <a href="https://platzi.com/@cristobalvega/" class="social-link facebook"></a>
           <a href="https://dev.to/cristobalvega">
             <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Cristobal Vega's DEV Profile" height="55" width="55">
           </a>
           <a href="https://www.goodreads.com/cristobalvega"class="social-link goodreads"></a>
+          <a href="https://www.crunchyroll.com/user/elskippa" class="social-link crunchyroll"></a>
         </div>
       </div>
     </section>
