chenges in hero

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="hero">
       <div class="container">
         <h1>
-          Hola! Soy <strong>Cristobal Vega</strong> <br/> Desarrollador  <strong>Javascript</strong> con <br> pasión por la <strong>enseñanza</strong>
+          Hola! Soy <strong>Cristobal Vega</strong> <br/> Desarrollador <strong>Java </strong> y <strong>Javascript</strong> que <br> se dio cuenta que <strong>javascript</strong> no es <strong>java.</strong>
         </h1>
         <img class="hero-image" src="images/platzi-conf-2019.jpg" width="500" height="300" alt="imagen principal del sitio">
       </div>
